[package]
name = "tempbin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
actix-web = "4"
actix-multipart = "0.4"
mime_guess = "2"
rand = "0.8.5"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.20", features = ["fs"] }
tokio-util = "0.7.3"
futures-util = "0.3"
