[package]
name = "tempbin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
actix-web = "4"
actix-multipart = "0.4"
env_logger = "0.9"
futures-util = "0.3"
lazy_static = "1.4"
log = "0.4"
mime_guess = "2"
rand = "0.8.5"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.20", features = ["fs", "macros"] }
tokio-util = "0.7.3"
urlencoding = "2.1.0"

[profile.release]
lto = true
strip = true
